1. 添加业务流程，基本流程走通

--- a/stm32_test.uvprojx
+++ b/stm32_test.uvprojx
@@ -714,9 +714,14 @@
               <FilePath>.\src\app\utils.c</FilePath>
             </File>
             <File>
-              <FileName>commands.c</FileName>
+              <FileName>message.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\src\app\commands.c</FilePath>
+              <FilePath>.\src\app\message.c</FilePath>
+            </File>
+            <File>
+              <FileName>app.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\app\app.c</FilePath>
             </File>
           </Files>
         </Group>
